2013-08-24	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* configure.ac: Updated for newer locations of XCode installs (for iOS)
	* sdl-compat.h: Updated to handle SDL_GetKeyState for SDL 1.3 (for iOS) 
	* drag.cc: Added sdl-compat.h to prevent SDL 1.3 failure on SDL_GetKeyState

2013-07-28 Marzo Sette Torres Junior <marzojr@yahoo.com>
	* content/sifixes/src/items/bucket_cure.uc: Fixed bug #1856 "SI Fixes:
	  Discipline water / Gwenno".
	* objs/egg.cc: Fixed bug #1848 "SS: Broken traps in Abandoned Outpost".
	* content/sifixes/src/cutscenes/fawn_trial.uc: Use symbolic constant.
	* usecode/compiler/basic_block.h: Handle all opcode cases.
	* usecode/compiler/{test1.uc,ucdefs.h}: Updating test usecode.
	* usecode/ucxt/src/ucfunc.cc: Output local statics with an 'l' prefix.
	* usecode/compiler/ucparse.yy: Allow implicit pushing of 'item' for original
	  usecode function calls.
	* schedule.cc: Fixed bug #1847 "SI: Ghosts in cave talk as Chaos Hierophant"
	  using Dominus' workaround.

2013-05-15 Dominik Reichardt <dominus@users.sourceforge.net>
	* keyactions.cc: different messages for toggling fullscreen mode

2013-05-13	Malignant Manor <malignantmanor@users.sourceforge.net>
	* actors.cc: Fix charmed_more_difficult breaking double clicking on npcs
	  (r7343 regression)

2013-04-12 Dominik Reichardt <dominus@users.sourceforge.net>
	* schedule.cc: fixed looping change of patrol schedule to patrol in SI, setting 
	  it to loiter instead if preset schedule is patrol or if there are no presets.
	* gamewin.cc: only allow background sfx tracks for oggs and MT32Emu. The tracks
	  do not play nicely for normal midi devices. Should probably be allowed for
	  MT32 and FakeMT32 conversions as well.

2013-04-03 Dominik Reichardt <dominus@users.sourceforge.net>
	* usecode/ucinternal.cc: reverted fix for "error case of opcode CALLMS" of 
	  rev. 7363 to fix keyring in BG Keyring mod.
	
2013-02-24  Malignant Manor <malignantmanor@users.sourceforge.net>