@@ -1,0 +1,44 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+	<key>CFBundleIdentifier</key>
+	<string>net.sf.@PACKAGE@</string>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>en</string>
+	<key>CFBundleExecutable</key>
+	<string>@EXE_TARGET@</string>
+	<key>LSRequiresIPhoneOS</key>
+	<string>false</string>
+	<key>CFBundleDisplayName</key>
+	<string>@PACKAGE@</string>
+	<key>CFBundleSupportedPlatforms</key>
+	<array>
+		<string>iPhoneSimulator</string>
+	</array>
+	<key>CFBundleSignature</key>
+	<string>????</string>
+	<key>DTPlatformName</key>
+	<string>iphonesimulator</string>
+	<key>DTSDKName</key>
+	<string>iphonesimulator6.0</string>
+	<key>UIDeviceFamily</key>
+	<array>
+		<string>1</string>
+	</array>
+	<key>CFBundleGetInfoString</key>
+	<string>@VERSION@, Copyright 1998-2013 The Exult Team</string>
+	<key>CFBundleIconFile</key>
+	<string>Icon</string>
+	<key>CFBundleInfoDictionaryVersion</key>
+	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>@PACKAGE@</string>
+	<key>CFBundlePackageType</key>
+	<string>APPL</string>
+	<key>CFBundleVersion</key>
+	<string>@VERSION@</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright 1998-2013 The Exult Team</string>
+</dict>
+</plist>
